samples/_failures_safe/1761555408_77363a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_809d8686.c: In function ‘filter_by_level’:
./samples/SAFE/__tmp_809d8686.c:131: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_809d8686.c:130:9: error: expected declaration or statement at end of input
  130 |         if
      |         ^~
./samples/SAFE/__tmp_809d8686.c:130:9: error: expected declaration or statement at end of input
